# RayTracerChallenge

./: CMakeLists.txt
app/: 3D_sphere.cpp  3_spheres.cpp  CMakeLists.txt  analog_clock.cpp  hexagonal_planes.cpp  projectile.cpp  sphere_shadow.cpp
include/Graphics/: Canvas.hpp  Color.hpp  StripePattern.hpp
include/Interactions/: Intersection.hpp
include/Math/: Plane.hpp  Point.hpp  Ray.hpp  Shape.hpp  Sphere.hpp  Transformations.hpp  Vector.hpp
include/World/: Computations.hpp  Material.hpp  World.hpp
include/graphics/: Camera.hpp  Canvas.hpp  Color.hpp  PPM.hpp  Pixel.hpp
include/math/: Intersection.hpp  Intersections.hpp  Matrix.hpp  Point.hpp  Ray.hpp  Sphere.hpp  Transformations.hpp  Tuple.hpp  Vector.hpp
include/primitives/: Canvas.hpp  Color.hpp  Point.hpp  Vector.hpp
include/scene/: Computations.hpp  Intersection.hpp  Intersections.hpp  Light.hpp  Lighting.hpp  Material.hpp  Ray.hpp  Sphere.hpp  Transformations.hpp  View.hpp  World.hpp
include/utility/: Float_compare.hpp
src/: CMakeLists.txt
src/Graphics/: CMakeLists.txt  Canvas.cpp  Canvas.test.cpp  Color.cpp  Color.test.cpp  PPM.cpp  PPM.hpp  PPM.test.cpp  StripePattern.cpp  StripePattern.hpp  StripePattern.test.cpp
src/Interactions/: CMakeLists.txt  Interactions.cpp  Interactions.hpp  Intersection.hpp  Intersection.test.cpp  Lighting.cpp  Lighting.hpp  Lighting.test.cpp
src/Math/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Matrix.test.cpp  Plane.cpp  Plane.test.cpp  Point.cpp  Point.test.cpp  Ray.cpp  Ray.test.cpp  Shape.cpp  Shape.test.cpp  Sphere.cpp  Sphere.test.cpp  Transformations.cpp  Transformations.hpp  Transformations.test.cpp  Tuple.cpp  Tuple.hpp  Tuple.test.cpp  Vector.cpp  Vector.hpp  Vector.test.cpp
src/Math/utility/: Float_compare.cpp  Float_compare.hpp  Float_compare.test.cpp
src/World/: CMakeLists.txt  Camera.cpp  Camera.hpp  Camera.test.cpp  Computations.hpp  Material.hpp  Material.test.cpp  MaterialCmp.hpp  PointLight.hpp  PointLight.test.cpp  World.cpp  World.hpp  World.test.cpp
src/graphics/: CMakeLists.txt  Camera.cpp  Camera.test.cpp  Canvas.cpp  Canvas.test.cpp  Color.cpp  Color.test.cpp  PPM.cpp  PPM.test.cpp  PPM_helper.cpp  PPM_helper.hpp  PPM_helper.test.cpp  Pixel.cpp  Pixel.test.cpp
src/math/: CMakeLists.txt  Intersection.cpp  Intersection.test.cpp  Intersections.cpp  Intersections.test.cpp  Matrix.cpp  Matrix.test.cpp  Point.cpp  Point.test.cpp  Ray.cpp  Ray.test.cpp  Sphere.cpp  Sphere.test.cpp  Transformations.cpp  Transformations.test.cpp  Tuple.test.cpp  Vector.cpp  Vector.test.cpp
src/primitives/: CMakeLists.txt  Canvas.cpp  Canvas.test.cpp  Color.cpp  Color.test.cpp  Point.cpp  Point.test.cpp  Vector.cpp  Vector.test.cpp
src/scene/: CMakeLists.txt  Computations.cpp  Computations.test.cpp  Intersection.cpp  Intersection.test.cpp  Intersections.cpp  Intersections.test.cpp  Light.cpp  Light.test.cpp  Lighting.cpp  Lighting.test.cpp  Material.cpp  Material.test.cpp  Ray.cpp  Ray.test.cpp  Sphere.cpp  Sphere.test.cpp  Transformations.cpp  Transformations.test.cpp  View.cpp  View.test.cpp  World.cpp  World.test.cpp
src/utility/: CMakeLists.txt  Float_compare.cpp  Float_compare.hpp  Float_compare.test.cpp
