add_library(Tuple INTERFACE)
target_include_directories(Tuple INTERFACE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(Tuple INTERFACE Float_compare)
add_executable(test_Tuple Tuple.test.cpp)
target_link_libraries(test_Tuple Tuple gtest_main)

add_library(Point Point.cpp)
target_link_libraries(Point Tuple)
add_executable(test_Point Point.test.cpp)
target_link_libraries(test_Point Point gtest_main)

add_library(Vector Vector.cpp)
target_link_libraries(Vector Point)
add_executable(test_Vector Vector.test.cpp)
target_link_libraries(test_Vector Vector gtest_main)

add_library(Matrix Matrix.cpp)
target_link_libraries(Matrix Tuple)
add_executable(test_Matrix Matrix.test.cpp)
target_link_libraries(test_Matrix Matrix gtest_main)

add_library(Transformations Transformations.cpp)
target_link_libraries(Transformations Point Vector Matrix)
add_executable(test_Transformations Transformations.test.cpp)
target_link_libraries(test_Transformations Transformations gtest_main)

add_library(Ray Ray.cpp)
target_link_libraries(Ray Point Vector)
add_executable(test_Ray Ray.test.cpp)
target_link_libraries(test_Ray Ray gtest_main)

add_library(Sphere Sphere.cpp)
target_include_directories(Sphere PRIVATE ${CMAKE_SOURCE_DIR}/include)
add_executable(test_Sphere Sphere.test.cpp)
target_include_directories(test_Sphere PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(test_Sphere Sphere gtest_main)
